--- a/event4.html
+++ b/event4.html
@@ -69,7 +69,7 @@
 <body>
   <div class="container">
     <!-- Gambar utama -->
-    <img src="https://i.imgur.com/LBBfRfq.png" class="bg">
+    <img src="https://i.imgur.com/LBBfRfq.png" alt="Game Image" class="bg">
 
     <!-- Logo kanan atas -->
     <div class="logo">
