--- a/event1.html
+++ b/event1.html
@@ -15,15 +15,19 @@
     .container {
       position: relative;
       width: 100%;
-      height: 100vh;
+      height: 100vh; /* full layar */
       overflow: hidden;
+      background: black; /* biar rapi saat contain */
     }
 
+    /* Gambar background full tanpa terpotong */
     .container img.bg {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;   /* seluruh gambar terlihat */
+      object-position: center;
       display: block;
+      background: black;     /* sisa ruang jadi hitam */
     }
 
     /* Teks Subscribe to Watch */
@@ -45,15 +49,15 @@
       align-items: center;
       background: #e50914;
       color: #fff;
-      padding: 10px 18px;
+      padding: 14px 24px;
       border-radius: 30px;
-      font-size: 16px;
+      font-size: 20px; /* diperbesar */
       font-weight: bold;
       text-decoration: none;
       transition: background 0.3s;
     }
     .btn-watch:hover { background: #b20710; }
-    .btn-watch .icon { margin-right: 8px; }
+    .btn-watch .icon { margin-right: 10px; font-size: 22px; }
 
     /* Logo kanan atas */
     .logo {
@@ -87,17 +91,18 @@
       <span class="icon">▶</span> Watch Live
     </a>
   </div>
-  <!-- Histats.com  START  (aync)-->
-<script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4980999,4,0,0,0,00010000']);
-_Hasync.push(['Histats.fasi', '1']);
-_Hasync.push(['Histats.track_hits', '']);
-(function() {
-var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-hs.src = ('//s10.histats.com/js15_as.js');
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-})();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4980999&101" alt="" border="0"></a></noscript>
-<!-- Histats.com  END  -->
+
+  <!-- Histats.com START -->
+  <script type="text/javascript">var _Hasync= _Hasync|| [];
+  _Hasync.push(['Histats.start', '1,4980999,4,0,0,0,00010000']);
+  _Hasync.push(['Histats.fasi', '1']);
+  _Hasync.push(['Histats.track_hits', '']);
+  (function() {
+  var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+  hs.src = ('//s10.histats.com/js15_as.js');
+  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+  })();</script>
+  <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4980999&101" alt="" border="0"></a></noscript>
+  <!-- Histats.com END -->
 </body>
 </html>
