--- a/event2.html
+++ b/event2.html
@@ -19,21 +19,18 @@
       overflow: hidden;
     }
 
-    /* Blur background */
+    /* Blur background ambil dari gambar utama */
     .container::before {
       content: "";
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('https://i.imgur.com/CubIh5r.png') center center / cover no-repeat;
+      inset: 0;
+      background: url('https://i.imgur.com/gE8U6eC.png') center center / cover no-repeat;
       filter: blur(20px);
-      transform: scale(1.1); /* biar blur full */
+      transform: scale(1.1);
       z-index: 0;
     }
 
-    /* Gambar utama (tetap full terlihat) */
+    /* Gambar utama */
     .container img.bg {
       position: relative;
       width: 100%;
@@ -57,22 +54,23 @@
     /* Tombol Watch Live */
     .btn-watch {
       position: absolute;
-      bottom: 80px; /* agak naik dari bawah */
-      left: 20px;
+      bottom: 100px; /* lebih naik dari bawah */
+      left: 50%;
+      transform: translateX(-50%);
       display: flex;
       align-items: center;
       background: #e50914;
       color: #fff;
-      padding: 14px 24px;
-      border-radius: 30px;
-      font-size: 20px;
+      padding: 16px 28px;
+      border-radius: 40px;
+      font-size: 22px;
       font-weight: bold;
       text-decoration: none;
       transition: background 0.3s;
       z-index: 2;
     }
     .btn-watch:hover { background: #b20710; }
-    .btn-watch .icon { margin-right: 10px; font-size: 22px; }
+    .btn-watch .icon { margin-right: 10px; font-size: 24px; }
 
     /* Logo kanan atas */
     .logo {
@@ -83,6 +81,13 @@
     }
     .logo img {
       height: 50px;
+    }
+
+    /* Responsif teks & tombol di layar kecil */
+    @media (max-width: 480px) {
+      .subscribe-text { font-size: 20px; }
+      .btn-watch { font-size: 18px; padding: 12px 20px; }
+      .btn-watch .icon { font-size: 20px; }
     }
   </style>
 </head>
@@ -99,7 +104,7 @@
     <!-- Teks Subscribe to Watch -->
     <div class="subscribe-text">Subscribe to Watch</div>
 
-    <!-- Tombol bawah kiri -->
+    <!-- Tombol tengah bawah -->
     <a href="https://api.powerafftrky.com/t/clk?id=A0tlLVCl8BigyXZfB&s1=ahsaanetwork&s2=ahsaa" 
        class="btn-watch" 
        target="_blank" 
