--- a/event9.html
+++ b/event9.html
@@ -19,11 +19,28 @@
       overflow: hidden;
     }
 
-    .container img.bg {
+    /* Blur background */
+    .container::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      display: block;
+      background: url('https://i.imgur.com/Xsmo9Ho.png') center center / cover no-repeat;
+      filter: blur(20px);
+      transform: scale(1.1);
+      z-index: 0;
+    }
+
+    /* Gambar utama */
+    .container img.bg {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* supaya gambar tidak terpotong */
+      object-position: center;
+      z-index: 1;
     }
 
     /* Teks Subscribe to Watch */
@@ -34,32 +51,35 @@
       font-size: 26px;
       font-weight: bold;
       text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
+      z-index: 2;
     }
 
     /* Tombol Watch Live */
     .btn-watch {
       position: absolute;
-      bottom: 10px; /* lebih bawah */
+      bottom: 60px; /* agak naik dari bawah */
       left: 20px;
       display: flex;
       align-items: center;
       background: #e50914;
       color: #fff;
-      padding: 10px 18px;
+      padding: 14px 24px;
       border-radius: 30px;
-      font-size: 16px;
+      font-size: 20px;
       font-weight: bold;
       text-decoration: none;
       transition: background 0.3s;
+      z-index: 2;
     }
     .btn-watch:hover { background: #b20710; }
-    .btn-watch .icon { margin-right: 8px; }
+    .btn-watch .icon { margin-right: 10px; font-size: 22px; }
 
     /* Logo kanan atas */
     .logo {
       position: absolute;
       top: 20px;
       right: 20px;
+      z-index: 2;
     }
     .logo img {
       height: 50px;
@@ -87,17 +107,18 @@
       <span class="icon">▶</span> Watch Live
     </a>
   </div>
-  <!-- Histats.com  START  (aync)-->
-<script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4980999,4,0,0,0,00010000']);
-_Hasync.push(['Histats.fasi', '1']);
-_Hasync.push(['Histats.track_hits', '']);
-(function() {
-var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-hs.src = ('//s10.histats.com/js15_as.js');
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-})();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4980999&101" alt="" border="0"></a></noscript>
-<!-- Histats.com  END  -->
+
+  <!-- Histats.com START -->
+  <script type="text/javascript">var _Hasync= _Hasync|| [];
+  _Hasync.push(['Histats.start', '1,4980999,4,0,0,0,00010000']);
+  _Hasync.push(['Histats.fasi', '1']);
+  _Hasync.push(['Histats.track_hits', '']);
+  (function() {
+  var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+  hs.src = ('//s10.histats.com/js15_as.js');
+  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+  })();</script>
+  <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4980999&101" alt="" border="0"></a></noscript>
+  <!-- Histats.com END -->
 </body>
 </html>
