--- a/event10.html
+++ b/event10.html
@@ -10,20 +10,37 @@
       font-family: Arial, sans-serif;
       background: black;
       color: white;
+      overflow: hidden;
     }
 
     .container {
       position: relative;
       width: 100%;
       height: 100vh;
-      overflow: hidden;
     }
 
-    .container img.bg {
+    /* Background blur dari gambar utama */
+    .container::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      background: url("https://i.imgur.com/FYGyEog.png") center center / cover no-repeat;
+      filter: blur(20px) brightness(0.6);
+      z-index: 0;
+    }
+
+    /* Gambar utama */
+    .container img.bg {
+      position: relative;
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
       display: block;
+      margin: 0 auto;
+      z-index: 1;
     }
 
     /* Teks Subscribe to Watch */
@@ -31,26 +48,28 @@
       position: absolute;
       top: 30px;
       left: 20px;
-      font-size: 26px;
+      font-size: 28px;
       font-weight: bold;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.8);
+      z-index: 2;
     }
 
     /* Tombol Watch Live */
     .btn-watch {
       position: absolute;
-      bottom: 10px; /* lebih bawah */
+      bottom: 60px; /* dinaikin */
       left: 20px;
       display: flex;
       align-items: center;
       background: #e50914;
       color: #fff;
-      padding: 10px 18px;
+      padding: 14px 22px;
       border-radius: 30px;
-      font-size: 16px;
+      font-size: 20px; /* lebih besar */
       font-weight: bold;
       text-decoration: none;
       transition: background 0.3s;
+      z-index: 2;
     }
     .btn-watch:hover { background: #b20710; }
     .btn-watch .icon { margin-right: 8px; }
@@ -60,9 +79,10 @@
       position: absolute;
       top: 20px;
       right: 20px;
+      z-index: 2;
     }
     .logo img {
-      height: 50px;
+      height: 55px;
     }
   </style>
 </head>
@@ -87,6 +107,7 @@
       <span class="icon">▶</span> Watch Live
     </a>
   </div>
+
   <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4980999,4,0,0,0,00010000']);
