--- a/event3.html
+++ b/event3.html
@@ -28,18 +28,19 @@
       width: 100%;
       height: 100%;
       background: url('https://i.imgur.com/gwOzAap.png') center center / cover no-repeat;
-      filter: blur(20px);
+      filter: blur(20px) brightness(0.6);
       transform: scale(1.1);
       z-index: 0;
     }
 
-    /* Gambar utama tetap cover */
+    /* Gambar utama utuh (contain) */
     .container img.bg {
       position: relative;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+      display: block;
+      margin: 0 auto;
       z-index: 1;
     }
 
