--- a/event10.html
+++ b/event10.html
@@ -10,16 +10,16 @@
       font-family: Arial, sans-serif;
       background: black;
       color: white;
-      overflow: hidden;
     }
 
     .container {
       position: relative;
       width: 100%;
       height: 100vh;
+      overflow: hidden;
     }
 
-    /* Background blur dari gambar utama */
+    /* Blur background */
     .container::before {
       content: "";
       position: absolute;
@@ -29,15 +29,17 @@
       height: 100%;
       background: url("https://i.imgur.com/FYGyEog.png") center center / cover no-repeat;
       filter: blur(20px) brightness(0.6);
+      transform: scale(1.1);
       z-index: 0;
     }
 
     /* Gambar utama */
     .container img.bg {
       position: relative;
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* gambar tidak terpotong */
+      object-position: center;
       display: block;
       margin: 0 auto;
       z-index: 1;
@@ -48,31 +50,31 @@
       position: absolute;
       top: 30px;
       left: 20px;
-      font-size: 28px;
+      font-size: 26px;
       font-weight: bold;
-      text-shadow: 1px 1px 5px rgba(0,0,0,0.8);
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
       z-index: 2;
     }
 
     /* Tombol Watch Live */
     .btn-watch {
       position: absolute;
-      bottom: 60px; /* dinaikin */
+      bottom: 80px; /* agak naik */
       left: 20px;
       display: flex;
       align-items: center;
       background: #e50914;
       color: #fff;
-      padding: 14px 22px;
+      padding: 14px 24px;
       border-radius: 30px;
-      font-size: 20px; /* lebih besar */
+      font-size: 20px;
       font-weight: bold;
       text-decoration: none;
       transition: background 0.3s;
       z-index: 2;
     }
     .btn-watch:hover { background: #b20710; }
-    .btn-watch .icon { margin-right: 8px; }
+    .btn-watch .icon { margin-right: 10px; font-size: 22px; }
 
     /* Logo kanan atas */
     .logo {
@@ -82,7 +84,7 @@
       z-index: 2;
     }
     .logo img {
-      height: 55px;
+      height: 50px;
     }
   </style>
 </head>
@@ -108,17 +110,17 @@
     </a>
   </div>
 
-  <!-- Histats.com  START  (aync)-->
-<script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4980999,4,0,0,0,00010000']);
-_Hasync.push(['Histats.fasi', '1']);
-_Hasync.push(['Histats.track_hits', '']);
-(function() {
-var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-hs.src = ('//s10.histats.com/js15_as.js');
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-})();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4980999&101" alt="" border="0"></a></noscript>
-<!-- Histats.com  END  -->
+  <!-- Histats.com START -->
+  <script type="text/javascript">var _Hasync= _Hasync|| [];
+  _Hasync.push(['Histats.start', '1,4980999,4,0,0,0,00010000']);
+  _Hasync.push(['Histats.fasi', '1']);
+  _Hasync.push(['Histats.track_hits', '']);
+  (function() {
+  var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+  hs.src = ('//s10.histats.com/js15_as.js');
+  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+  })();</script>
+  <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4980999&101" alt="" border="0"></a></noscript>
+  <!-- Histats.com END -->
 </body>
 </html>
