--- a/event3.html
+++ b/event3.html
@@ -33,14 +33,14 @@
       z-index: 0;
     }
 
-    /* Gambar utama utuh (contain) */
+    /* Gambar utama utuh */
     .container img.bg {
       position: relative;
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
       object-fit: contain;
+      object-position: center;
       display: block;
-      margin: 0 auto;
       z-index: 1;
     }
 
@@ -49,7 +49,7 @@
       position: absolute;
       top: 30px;
       left: 20px;
-      font-size: 26px;
+      font-size: 28px;
       font-weight: bold;
       text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
       z-index: 2;
@@ -58,22 +58,22 @@
     /* Tombol Watch Live */
     .btn-watch {
       position: absolute;
-      bottom: 60px; /* agak naik */
+      bottom: 100px; /* agak naik dari bawah */
       left: 20px;
       display: flex;
       align-items: center;
       background: #e50914;
       color: #fff;
-      padding: 14px 24px;
+      padding: 14px 26px;
       border-radius: 30px;
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
       text-decoration: none;
       transition: background 0.3s;
       z-index: 2;
     }
     .btn-watch:hover { background: #b20710; }
-    .btn-watch .icon { margin-right: 10px; font-size: 22px; }
+    .btn-watch .icon { margin-right: 10px; font-size: 24px; }
 
     /* Logo kanan atas */
     .logo {
@@ -84,6 +84,26 @@
     }
     .logo img {
       height: 50px;
+    }
+
+    /* Responsive biar enak di HP */
+    @media (max-width: 600px) {
+      .subscribe-text {
+        font-size: 20px;
+        top: 20px;
+        left: 15px;
+      }
+      .btn-watch {
+        font-size: 18px;
+        padding: 12px 20px;
+        bottom: 80px;
+      }
+      .btn-watch .icon {
+        font-size: 20px;
+      }
+      .logo img {
+        height: 40px;
+      }
     }
   </style>
 </head>
